[gd_scene load_steps=8 format=3 uid="uid://do3k110dd1vl4"]

[ext_resource type="Script" path="res://scripts/ui+background/enemy_panel.gd" id="1_sxjs3"]
[ext_resource type="Resource" uid="uid://dw14vjw11xfu2" path="res://resources/enemy_ships/crasher_ship.tres" id="2_6eh0g"]
[ext_resource type="Resource" uid="uid://btbcd3rgrvt1a" path="res://resources/enemy_ships/speedster.tres" id="3_cxgem"]
[ext_resource type="Script" path="res://distance.gd" id="4_3sglr"]
[ext_resource type="Script" path="res://scripts/ui+background/max_distance.gd" id="4_eh53u"]
[ext_resource type="Script" path="res://scripts/ui+background/min_distance.gd" id="5_38hwq"]

[sub_resource type="LabelSettings" id="LabelSettings_vbsns"]
font_size = 14

[node name="enemy_panel" type="Panel"]
offset_right = 214.0
offset_bottom = 544.0
script = ExtResource("1_sxjs3")
enemy_ships = Array[Resource("res://resources/enemy_ship_type.gd")]([ExtResource("2_6eh0g"), ExtResource("3_cxgem")])

[node name="spawnenemy" type="Label" parent="."]
layout_mode = 0
offset_right = 215.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 25
text = "SPAWN ENEMY"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -224.0
offset_right = 95.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(93, 114.5)
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 280.0
offset_right = 184.0
offset_bottom = 344.0
text = "Spawn
"

[node name="randombutton" type="Button" parent="."]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 32.0
offset_top = 352.0
offset_right = 184.0
offset_bottom = 384.0
toggle_mode = true
text = "Random
"

[node name="kill_all" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 512.0
offset_right = 184.0
offset_bottom = 543.0
text = "Kill all"

[node name="max_distance" type="Label" parent="."]
layout_mode = 0
offset_top = 400.0
offset_right = 215.0
offset_bottom = 432.0
text = "Max Distance: ____
"
label_settings = SubResource("LabelSettings_vbsns")
vertical_alignment = 1
justification_flags = 162
script = ExtResource("4_eh53u")

[node name="MAXHSlider" type="HSlider" parent="max_distance"]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 200.0
offset_bottom = 48.0
min_value = 200.0
max_value = 5000.0
value = 200.0
scrollable = false

[node name="distance" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 400.0
offset_right = 215.0
offset_bottom = 432.0
text = "Distance: ____
"
label_settings = SubResource("LabelSettings_vbsns")
vertical_alignment = 1
justification_flags = 162
script = ExtResource("4_3sglr")

[node name="DISTANCEHSlider" type="HSlider" parent="distance"]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 200.0
offset_bottom = 48.0
min_value = 200.0
max_value = 5000.0
value = 200.0
scrollable = false

[node name="min_distance" type="Label" parent="."]
layout_mode = 0
offset_top = 448.0
offset_right = 215.0
offset_bottom = 480.0
text = "Min Distance: ____
"
label_settings = SubResource("LabelSettings_vbsns")
vertical_alignment = 1
justification_flags = 162
script = ExtResource("5_38hwq")

[node name="MINHSlider" type="HSlider" parent="min_distance"]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 200.0
offset_bottom = 48.0
min_value = 200.0
max_value = 5000.0
value = 200.0
scrollable = false

[connection signal="item_selected" from="ItemList" to="." method="item_list_item_selected"]
[connection signal="pressed" from="Button" to="." method="spawn_pressed"]
[connection signal="toggled" from="randombutton" to="." method="randombutton_toggled"]
[connection signal="pressed" from="kill_all" to="." method="kill_all"]
[connection signal="value_changed" from="max_distance/MAXHSlider" to="max_distance" method="hslider_value_changed"]
[connection signal="value_changed" from="max_distance/MAXHSlider" to="min_distance" method="max_hslider_value_changed"]
[connection signal="value_changed" from="distance/DISTANCEHSlider" to="distance" method="hslider_value_changed"]
[connection signal="value_changed" from="min_distance/MINHSlider" to="min_distance" method="hslider_value_changed"]
